# game-music-emu-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  Web.toml  _build.rs  build.rs
.cargo/: config
.github/workflows/: ci.yml
examples/: play_nsf.rs  play_nsf_native.rs
src/: bridge.rs  emu_equalizer.rs  emu_track_info.rs  emu_type.rs  error.rs  experimental.rs  lib.rs  native.rs  rust_impl.rs  structures.rs  test_utils.rs  wrapper.rs
src/gme/: CMakeLists.txt  blargg_config.h  blargg_source.h  gme.h  gme_types.h
src/native/: core.rs  nes.rs
src/native/core/: blip_buffer.rs  classic_emu.rs  gme_file.rs  m3u_playlist.rs  multi_buffer.rs
src/native/nes/: nes_apu.rs  nes_oscs.rs  nsf_emu.rs
src/rust_impl/: core.rs  nes.rs
