[package]
name = "game-music-emu"
version = "0.2.0"
authors = ["Jay Pavlina <jaypavlina@gmail.com>"]
edition = "2018"
build = "_build.rs"
readme = "README.md"
license = "MIT AND LGPL-2.1-or-later"
description = "Rust bindings for Game Music Emu"
keywords = ["NSF", "game", "music", "emulation", "audio"]
categories = ["api-bindings", "multimedia::audio"]
repository = "https://github.com/JayPavlina/Game-Music-Emu-Rust"

[features]
default = ["ay", "gbs", "gym", "hes", "kss", "nsf", "nsfe", "sap", "spc", "vgm", "ym2612_emu_nuked"]
ay = []
gbs = []
gym = []
hes = []
kss = []
nsf = []
nsfe = []
sap = []
spc = []
vgm = []
native = []
# choose one ym2612_emu or none. If none chosen, Ym2612_GENS.cpp is used
ym2612_emu_nuked = []
ym2612_emu_mame = []

[dependencies]
bincode = { version = "1.3.3" }
err-derive = "0.3"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
smart-default = "0.6.0"

#[build-dependencies]
#cc = "1.0"

[dev-dependencies]
cpal = "0.13.1"

[[example]]
name = "play_nsf"
path = "examples/play_nsf.rs"

[[example]]
name = "play_nsf_native"
path = "examples/play_nsf_native.rs"
required-features = ["native", "nsf"]